[package]
name = "website_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
askama = "0.11"
lazy_static = "1.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
itoa = "1.0.1"
markdown = "0.3.0"